--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "botman/botman": "^2.8",
+        "botman/driver-facebook": "^1.11",
         "botman/driver-web": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
